--- a/client/src/app/global.scss
+++ b/client/src/app/global.scss
@@ -10,6 +10,7 @@
 
 html {
   font-size: 16px;
+  color: rgb(30 41 59);
 }
 
 html,
@@ -25,4 +26,7 @@ a {
 }
 ul {
   list-style: none;
+}
+input {
+  outline-width: 0px;
 }
